[package]
name = "rsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.7.7"
rocksdb = "0.22.0"
scraper = "0.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
